--- a/app/src/main/res/menu/toolbar_options.xml
+++ b/app/src/main/res/menu/toolbar_options.xml
@@ -2,15 +2,29 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!-- "Log in", should appear as action button if possible -->
-<item
-    android:id="@+id/action_login"
-    android:title="@string/action_login"
-    app:showAsAction="ifRoom|withText"/>
+    <!-- "Log in", should appear as action button if possible -->
+    <item
+        android:id="@+id/action_login"
+        android:title="@string/action_login"
+        android:visible="true"
+        app:showAsAction="ifRoom|withText"/>
 
-<!-- Settings, should always be in the overflow -->
-<item android:id="@+id/action_settings"
-    android:title="@string/action_settings"
-    app:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/action_user"
+        android:title="user"
+        android:visible="false"
+        app:showAsAction="ifRoom|withText">
+        <menu>
+            <item
+                android:id="@+id/action_logout"
+                android:title="Logout"
+                app:showAsAction="never|withText" />
+        </menu>
+    </item>
+
+    <!-- Settings, should always be in the overflow -->
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom|withText"/>
 
 </menu>
