--- a/app/src/main/res/menu/toolbar_options.xml
+++ b/app/src/main/res/menu/toolbar_options.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!-- "Log in", should appear as action button if possible -->
 <item
     android:id="@+id/action_login"
     android:title="@string/action_login"
     app:showAsAction="ifRoom|withText"/>
 
-<!-- Settings, should always be in the overflow -->
-<item android:id="@+id/action_settings"
+<item
+    android:id="@+id/action_settings"
     android:title="@string/action_settings"
     app:showAsAction="ifRoom|withText"/>
+
+<item
+    android:id="@+id/action_exportCSV"
+    android:title="@string/action_exportCSV"
+    app:showAsAction="never|withText"/>
 
 </menu>
