--- a/app/src/main/res/layout/settings_dialog.xml
+++ b/app/src/main/res/layout/settings_dialog.xml
@@ -14,24 +14,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation='horizontal'>
-        <RelativeLayout
+
+        <RadioGroup
+            android:id='@+id/radio_location_group'
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:orientation="horizontal">
             <RadioButton
                 android:id='@+id/enable_location'
                 android:layout_width='wrap_content'
                 android:layout_height='wrap_content'
-                android:text="enable" >
+                android:text="enable">
             </RadioButton>
             <RadioButton
                 android:id='@+id/disable_location'
                 android:layout_width='wrap_content'
                 android:layout_height='wrap_content'
-                android:text="disable"
-                android:layout_alignParentRight="true">
+                android:text="disable">
             </RadioButton>
-        </RelativeLayout>
+        </RadioGroup>
+
     </LinearLayout>
 
 
