Shared Pref. added (need log in edit) + Clearing DB

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="Clear data" />
+        android:text="Clear data"
+        android:onClick="clearDB"/>
 
     <ListView
         android:id="@+id/record_view"
