--- a/app/src/main/res/menu/toolbar_options.xml
+++ b/app/src/main/res/menu/toolbar_options.xml
@@ -21,10 +21,9 @@
         </menu>
     </item>
 
-    <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="never|withText"/>
 
     <item
         android:id="@+id/action_exportCSV"
